# Kie_AI

./: .gitignore  README.md
.github/: repository-metadata.json
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitkeep
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backup.rs  keyring_store.rs  lib.rs  sidecar.rs
apps/sidecar/: kie-sidecar.spec  pyproject.toml
apps/sidecar/catalog/: all_paths.txt  chat_paths.txt  full_catalog.json  kie_apis.txt  llms_count.txt  llms_full_count.txt  llms_models.json  llms_paths_dump.txt  market_groups.json  market_manifest.json  model_paths.json  pricing_analysis.txt  providers.json  suno_group.json
apps/sidecar/kie_sidecar/: __main__.py  config.py  main.py  state.py
apps/sidecar/scripts/: analyze_pricing.py  build_full_catalog.py  build_market_manifest.py  dump_llms_paths.py  generate_audio_registry.py  generate_market_registry.py  parse_llms_catalog.py  scan_kie_js.ps1  scrape_kie_apis.py
apps/sidecar/tests/: conftest.py  test_chat_stream.py  test_chats_crud.py  test_chats_v2.py  test_events.py  test_generations_audio.py  test_generations_crud.py  test_generations_video.py  test_health.py  (+8 more)
docs/: 01-preliminary-plan.md  02-architecture.md  03-v1.1-roadmap.md
scripts/: build-sidecar.ps1  build.ps1  dev.ps1  ensure-sidecar-binary.ps1  stop-sidecar.ps1  sync-pricing.ps1
(+343 files in other folders)
